# WebScraper

./: .pre-commit-config.yaml  .sourcery.yaml  Dockerfile  LICENCE  README.md  all_recipes.json  docker-compose.yml  file_processing.py  main.py  pyproject.toml  recipes.json  recipes_file.json  recipes_urls.json  requirements.txt  scraper.py  utilities.py
.github/workflows/: docker-build.yml
api/: Dockerfile  __init__.py  api.py
config/: __init__.py  config.py
json_files/: all_recipes.json  categories.json  parsed_recipes.json  recipes_urls.json  recipes_with_ingredients.json  recipes_without_ingredients.json
scraper/: Dockerfile  __init__.py  main.py  scraper.py  updates_scraper.py  utilities.py
tests/: __init__.py  scraper_tests.py
utilities/: __init__.py  error_handling.py  file_processing.py  logger.py  scheduler.py
