[tool.poetry]
name = "Webscraper"
version = "0.1.0"
description = "My first webscraper parsing recipes from Bianca Zapatka website"
authors = ["Pawel Bartczak pawel@bartczak.tech"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
tqdm= "^4.66.4"
fastapi= "^0.111.0"
schedule= "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.4.5"

[tool.ruff]
line-length = 120

indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore  = ["ANN101", "FIX002", "TD003", "D107", "D103"]

[tool.ruff.format]
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
